2008-07-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug ##8913: Empty tabs in DynTabMenu should not be selectable by default

2008-07-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8566: Unable to match TS condition when variable is not set
	* Fixed bug #8934: change compatibility version to 4.3.0 for all sysexts

2008-07-14  Martin Kutschker  <masi@typo3.org>

	* Follow up to bug #8510: Hardcoded labels in typo3/show_item.php (thanks to Christopher Stelmaszyk)

2008-07-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8786: missing wrapper for mysql_errno (thanks to Steffen Kamper)

2008-07-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8697: Warnings when using MySql 4.0

2008-07-13  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #5476: links entered in <th>-tag with the RTE are not parsed on the frontend because parseFunc doesn't recognize <th> as cells (thanks to Daniel Ellermann)
	* Fixed bug #8682: no result check for setlocale via TypoScript
	* Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc
	* Fixed bug #8510: Hardcoded labels in typo3/show_item.php (thanks to Christopher Stelmaszyk)

2008-07-12  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8864: Allow TS config.absRefPrefix to work with resources in typo3conf/ext. Make it work with a changed location of fileadmin/. (fix by Bejamin Mack)
	* Fixed bug #8833: TCA "check" type field checkboxes have no labels when in 1-column display (thanks to Francois Suter)
	* Fixed bug #8948: phpDoc @internal hides public functions of t3lib_div in Eclipse
	* Fixed bug #8922: setStage operation of t3lib_TCAmain::process_cmdmap() overwrites $id parameter making it inaccessible for post-processing hooks 

2008-07-11  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8941: Fixed an uninitialized array that might lead to PHP warning (Thanks to Ralf Hettinger)

2008-07-09  Oliver Hader  <oliver@typo3.org>
