@@ -1,3 +1,7 @@
+2008-07-21  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #8534: Backend Login is now template-able
+
 2008-07-19  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug ##8913: Empty tabs in DynTabMenu should not be selectable by default
